deployments/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: envoy-gateway

spec:
  gatewayClassName: envoy-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 7070
    hostname: "api.shreekrishna.tech"
    allowedRoutes:
      namespaces:
        from: All
